2010-11-19 Lorenzo Natale <lorenzo.natale@iit.it>
	main/app/CMakeLists.txt: fixed erroneus destination directory
	for icubapp.py and app.txt.template

2010-10-29 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake modified icub_app functions, grouped code 
	that was spread in different places in single functions to be used
	in contrib.
	
2010-10-25 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake added checks so that locally modified files are preserved,
	this required deep revision of install mechanism which now uses locally generated cmake
	scripts instead of cmake commands.
	
2010-10-7 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install(FILES...) now skip directories
	bug fix: wrong behavior with cmake 2.6.0 about creation of directories

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	main/conf/iCubHelpers.cmake icub_app_install support case 
	in which no DESTINATION is given.

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	add rules to install manager.py, added target python-scripts
	that manually copies manager.py to the build directory
    
2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	app/default/scripts/manager.py
	main/app/default/scripts/manager.py
	bug fixes on timeout, basic handling of linux/windows
	differences, minor version on windows is 2.6

2010-10-6 Lorenzo Natale <lorenzo.natale@iit.it>
	applications no longer in the ALL group

2010-10-01 Lorenzo Natale <lorenzo.natale@iit.it>
	code for applications, default is now true, removed guards added iCubGenova01

2010-09-24 Lorenzo Natale <lorenzo.natale@iit.it>
	src/core/iCubInterface/RobotInterfaceRemap.cpp:
	config file now accepts no parts


2010-09-24 Lorenzo Natale <lorenzo.natale@iit.it>
		./main/src/core/iCubInterface:
		./main/src/libraries/skinprototype:
		modified to handle rpc for IAnalog interface.

2010-09-23 Lorenzo Natale <lorenzo.natale@iit.it>
		./main/src/libraries/icubmod/CMakeLists.txt: